# lab02-oop-alpha

./: Administrative.cpp  Administrative.h  CMakeLists.txt  Coleccion.h  Coleccions.h  List.h  Main.cpp  ObjectBase.cpp  ObjectBase.h  Person.cpp  Person.h  Professor.cpp  Professor.h  README.md  University.cpp  University.h
